# VisionArm

./: .gitignore  机械臂.xmind
Firmware/ClioneMotot-42/: .mxproject  CMakeLists.txt  ClioneMotot-42.ioc  STM32F103XX_FLASH.ld
Firmware/ClioneMotot-42/Core/Inc/: main.h  stm32f1xx_it.h
Firmware/ClioneMotot-42/Core/Src/: adc.c  dma.c  freertos.c  gpio.c  main.c  spi.c  stm32f1xx_it.c  tim.c  usart.c
Firmware/ClioneMotot-42/CppInterface/: CMakeLists.txt  Cpphand.cpp  MT6816_STM32.cpp  MT6816_base.cpp  TB67H450_STM32.cpp  TB67H450_Stepper.cpp
Firmware/ClioneMotot-42/CppInterface/include/: Cpphand.h  Driver_base.h  Encoder_base.h  MT6816_STM32.h  MT6816_base.h  PWM_Base.h  TB67H450_STM32.h  TB67H450_Stepper.h
Firmware/ClioneMotot-42/Lwbtn/: CMakeLists.txt  log.md  lwbtn.c  lwbtn_button.c
Firmware/ClioneMotot-42/Lwbtn/Inc/: lwbtn.h  lwbtn_button.h  lwbtn_opt.h
Firmware/ClioneMotot-42/cmake/stm32cubemx/: CMakeLists.txt
Firmware/ClioneMotot-42/config/: STlink.cfg
Model/: Motor-42.bak  Motor-42.dxf
ROS2/install/: local_setup.sh  setup.sh
ROS2/install/annin_ar4_description/share/annin_ar4_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ROS2/install/annin_ar4_driver/lib/annin_ar4_driver/: reset_estop.sh  run_arduino_nano
ROS2/install/annin_ar4_driver/share/annin_ar4_driver/: hardware_interface_plugin.xml  (+10 more)
ROS2/log/: latest_build
ROS2/src/cpp_test/: CMakeLists.txt
ROS2/src/cpp_test/src/: move_robot.cpp
ROS2/test/: hello_moveit.py  main.py
(+111 files in other folders)
